--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@ xcuserdata
 
 # Exclude Visual Studio stuff
 .vs*
-CMakeSettings.json
 
 # Exclude QtCreator files ...
 CMakeLists.txt.user*
+
+# Exclude build files
+build*
+out
